test/corpus/expressions.txt
===================
Boolean Expressions
===================

var a = 1 == 1
var a = 1 <= 1
var a = 1 >= 1
var a = 1 < 1
var a = 1 > 1
var a = a == a

---

(source_file
    (var_statement
        (var_keyword)
        (identifier)
        (constant_expression)
        (equality_operator)
        (constant_expression))
    (var_statement
        (var_keyword)
        (identifier)
        (constant_expression)
        (less_or_equal_than_operator)
        (constant_expression))
    (var_statement
        (var_keyword)
        (identifier)
        (constant_expression)
        (greater_or_equal_than_operator)
        (constant_expression))
    (var_statement
        (var_keyword)
        (identifier)
        (constant_expression)
        (less_than_operator)
        (constant_expression))
    (var_statement
        (var_keyword)
        (identifier)
        (constant_expression)
        (greater_than_operator)
        (constant_expression))
    (var_statement
        (var_keyword)
        (identifier)
        (identifier)
        (equality_operator)
        (identifier)))
