test/corpus/statements.txt
====================
Variables / constants
====================

var test = 1
const test = 1

---

(source_file
    (var_statement
        (var_keyword)
        (identifier)
        (expression
            (constant_expression)))
    (const_statement
        (const_keyword)
        (identifier)
        (expression
            (constant_expression))))

===================
If statement
===================

if true {
    return true
}

---

(source_file
    (if_statement
        (if_keyword)
        (expression
            (constant_expression))
        (block
            (return_statement
                (return_keyword)
                (expression
                    (constant_expression))))))
