test/corpus/types.txt
==========
Types
==========

var test = "10"
var test = 10

---

(source_file
    (var_statement
        (var_keyword)
        (identifier)
        (constant_expression))
    (var_statement
        (var_keyword)
        (identifier)
        (constant_expression)))
